# CS_IpCameraServer

./: .gitignore  CBusinessLogic.cpp  CBusinessLogic.h  CClientSession.cpp  CClientSession.h  CConfig.cpp  CConfig.h  CJsonParser.cpp  CJsonParser.h  CMakeLists.txt  CS_IpCameraServer.sln  CS_IpCameraServer.vcxproj  CS_IpCameraServer.vcxproj.filters  CServer.cpp  CServer.h  Events.cpp  Events.h  README  README.md  SIpCameraEvent.hpp  Service.h  main.cpp  main.h
DAO/: CKnownIpCameraList.cpp  CKnownIpCameraList.h  SIpCameraEvent.hpp  SKnownIpCamera.hpp
include/INIReaderWriter/: INIWriter.hpp
working_exe/: CS_IpCameraServer.ini  Start.bat  Stop.bat  defaultEmptyDb.sqlite3
